OO-5088: block activation of course folder and areas